# Islamic-Trivia-Telegram-Bot

./: .dockerignore  .env  .gitignore  Cargo.toml  Docker  README.md  Shuttle.toml  questions.csv  reminders.csv  user_preferences.json
src/: lib.rs  main.rs
src/commands/: mod.rs
src/error/: mod.rs
src/handlers/: callback.rs  command.rs  mod.rs  reminder.rs
src/keyboard/: mod.rs
src/state/: mod.rs
src/types/: mod.rs  reminder.rs
tests/: integration_test.rs
