[package]
name = "islamic_trivia_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
async-trait = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
tempfile = "3.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "islamic_trivia_bot"
path = "src/main.rs"