[package]
name = "islamic-trivia-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
async-trait = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
tempfile = "3.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
axum = "0.7.4"

shuttle-service = { version = "0.49.0", features = ["tokio"] }
shuttle-secrets = "0.42.0"
shuttle-runtime = { version = "0.49.0" }
shuttle-axum = "0.49.0"
dotenvy = "0.15.7"
reqwest = {version = "0.12.9", features = ["blocking"]}
